drucker_dashboard/e2e_test/deploy/kube-development-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drucker-test-app
    sel: drucker-test-app-development-20180628151929
  name: drucker-test-app-development-20180628151929-deployment
  namespace: development
spec:
  minReadySeconds: 300
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      sel: drucker-test-app-development-20180628151929
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: drucker-test-app
        sel: drucker-test-app-development-20180628151929
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - drucker-test-app-development-20180628151929
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - command:
        - sh
        - /usr/local/src/entrypoint.sh
        image: druckerorg/drucker:v0.2
        imagePullPolicy: Always
        name: drucker-test-app-development-20180628151929
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 1
            memory: 256Mi
          requests:
            cpu: 0.5
            memory: 128Mi
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /mnt/drucker-model
          name: host-volume
      nodeSelector:
        host: development
      volumes:
      - hostPath:
          path: /mnt/drucker-model
        name: host-volume
